Update libs and adapt to Elasticsearch 8