@@ -7,12 +7,12 @@
  * Licensed under the EUPL, Version 1.2 or – as soon they will be
  * approved by the European Commission - subsequent versions of the
  * EUPL (the "Licence");
- * 
+ *
  * You may not use this work except in compliance with the Licence.
  * You may obtain a copy of the Licence at:
- * 
+ *
  * https://joinup.ec.europa.eu/software/page/eupl
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the Licence is distributed on an "AS IS" basis,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -22,6 +22,10 @@
  */
 package de.ingrid.admin.elasticsearch;
 
+import co.elastic.clients.elasticsearch.ElasticsearchClient;
+import co.elastic.clients.elasticsearch.indices.CreateIndexRequest;
+import co.elastic.clients.util.BinaryData;
+import co.elastic.clients.util.ContentType;
 import de.ingrid.admin.Config;
 import de.ingrid.admin.object.IDocumentProducer;
 import de.ingrid.admin.service.DummyProducer;
@@ -31,18 +35,11 @@ import de.ingrid.elasticsearch.search.IQueryParsers;
 import de.ingrid.elasticsearch.search.IndexImpl;
 import de.ingrid.elasticsearch.search.converter.*;
 import de.ingrid.utils.xml.XMLSerializer;
-import org.elasticsearch.ElasticsearchException;
-import org.elasticsearch.action.admin.indices.refresh.RefreshRequest;
-import org.elasticsearch.client.Client;
-import org.elasticsearch.xcontent.XContentType;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.Resource;
 import org.springframework.util.FileSystemUtils;
 
-import java.io.File;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.io.*;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Properties;
@@ -51,7 +48,7 @@ public class ElasticTests {
 
     public static ElasticsearchNodeFactoryBean elastic;
     public static QueryConverter qc;
-    public static Client client;
+    public static ElasticsearchClient client;
     private static List<IDocumentProducer> docProducers;
     public static ElasticConfig elasticConfig;
     protected static Config config;
@@ -81,6 +78,7 @@ public class ElasticTests {
         activeIndices[0] = indexInfo;
         elasticConfig.activeIndices = activeIndices;
         elasticConfig.indexFieldSummary = "content";
+        elasticConfig.indexFieldsIncluded = "*";
         elasticConfig.additionalSearchDetailFields = new String[0];
         elasticConfig.indexSearchDefaultFields = new String[] { "title^10.0","title.edge_ngram^4.0","title.ngram^2.0","summary","summary.edge_ngram^0.4","summary.ngram^0.2","content^0.2","content.ngram^0.1" };
         elasticConfig.remoteHosts = ((String)elasticProperties.get("elastic.remoteHosts")).split(",");
@@ -146,46 +144,54 @@ public class ElasticTests {
         setup( null, null, false );
     }
 
-    private static void prepareIndex(ElasticsearchNodeFactoryBean elastic, String fileData, String index) throws ElasticsearchException, Exception {
-        Client client = elastic.getClient();
+    private static void prepareIndex(ElasticsearchNodeFactoryBean elastic, String fileData, String index) throws Exception {
+        ElasticsearchClient client = elastic.getClient();
         ClassPathResource resource = new ClassPathResource( fileData );
 
-        byte[] urlsData = Files.readAllBytes( Paths.get( resource.getURI() ) );
+        InputStream input = resource.getInputStream();
+        BinaryData data = BinaryData.of(input.readAllBytes(), ContentType.APPLICATION_JSON);
 
-        client.prepareBulk().add( urlsData, 0, urlsData.length, XContentType.JSON)
-                .execute()
-                .actionGet();
+        client.bulk(builder -> builder.operations(op -> op
+                .index(idx -> idx
+                        .index(index)
+                        .document(data))
+                )
+        );
 
         // make sure the indexed data is available immediately during search!
         refreshIndex( index, client );
     }
 
-    public static void refreshIndex(String index, Client client) {
-        RefreshRequest refreshRequest = new RefreshRequest( index );
-        client.admin().indices().refresh( refreshRequest ).actionGet();
-    }
-
-    public static void deleteIndex(String index, Client client) {
-        RefreshRequest refreshRequest = new RefreshRequest( index );
-        client.admin().indices().refresh( refreshRequest ).actionGet();
+    public static void refreshIndex(String index, ElasticsearchClient client) {
+        try {
+            client.indices().refresh( r -> r.index(index) );
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     protected static void setMapping(ElasticsearchNodeFactoryBean elastic, String index) {
         try {
-            Client client = elastic.getClient();
+            ElasticsearchClient client = elastic.getClient();
             ClassPathResource resourceMapping = new ClassPathResource( "data/mapping.json" );
             ClassPathResource resourceSettings = new ClassPathResource( "data/settings.json" );
             String mapping = XMLSerializer.getContents(resourceMapping.getInputStream());
             String settings = XMLSerializer.getContents(resourceSettings.getInputStream());
 
-            if (client.admin().indices().prepareExists(index).execute().actionGet().isExists()) {
-                client.admin().indices().prepareDelete(index).execute().actionGet();
+            if (client.indices().exists(e -> e.index(index)).value()) {
+                client.indices().delete(d -> d.index(index));
             }
 
-            client.admin().indices().prepareCreate(index)
-                    .addMapping("base", mapping, XContentType.JSON)
-                    .setSettings(settings, XContentType.JSON)
-                    .execute().actionGet();
+            CreateIndexRequest.Builder request = new CreateIndexRequest.Builder().index(index);
+
+            request.mappings(m -> m.withJson(new StringReader(mapping)));
+            request.settings(s -> s.withJson(new StringReader(settings)));
+
+            try {
+                client.indices().create(request.build());
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
 
         } catch (Exception e) {
             e.printStackTrace();
